core/force-app/main/default/objects/Account/fields/Core_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Core_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Core Checkbox</label>
    <type>Checkbox</type>
</CustomField>