core/force-app/main/default/objects/Account/fields/Core_Text__c.field-meta.xml
<CustomField>
    <fullName>Core_Text__c</fullName>
    <label>Core Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>