core/force-app/main/default/objects/Account/fields/New_Core_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>New_Core_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Core Checkbox</label>
    <type>Checkbox</type>
</CustomField>